여러 개로 나뉜 프로젝트 한 곳에 정리

--- a/NGP/NGP/NGP.vcxproj.filters
+++ b/NGP/NGP/NGP.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="2-1.cpp">
+    <ClCompile Include="NGP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
