--- a/NGP/NGP/NGP.vcxproj.filters
+++ b/NGP/NGP/NGP.vcxproj.filters
@@ -5,18 +5,23 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="헤더 파일">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="리소스 파일">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="소스 파일\Homework">
+      <UniqueIdentifier>{6c6cd468-767d-4d20-b098-5045f7c736b3}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NGP.cpp">
       <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="homework2.cpp">
+      <Filter>소스 파일\Homework</Filter>
+    </ClCompile>
+    <ClCompile Include="homework1.cpp">
+      <Filter>소스 파일\Homework</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
