과제2 중간 저장

--- a/NGP/NGP/NGP.vcxproj.filters
+++ b/NGP/NGP/NGP.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="homework1.cpp">
       <Filter>소스 파일\Homework</Filter>
     </ClCompile>
+    <ClCompile Include="homework3.cpp">
+      <Filter>소스 파일\Homework</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
